Change company name to InfoNexa

--- a/blog.html
+++ b/blog.html
@@ -2,10 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Startup - Startup Website Template</title>
+    <title>Blog - InfoNexa IT Solutions</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content="Free HTML Templates" name="keywords" />
-    <meta content="Free HTML Templates" name="description" />
+    <meta
+      content="InfoNexa Blog, IT Insights, Technology Trends, Digital Transformation"
+      name="keywords"
+    />
+    <meta
+      content="Stay updated with InfoNexa's latest insights on IT solutions, technology trends, and digital transformation strategies."
+      name="description"
+    />
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon" />
@@ -104,7 +110,7 @@
     <div class="container-fluid position-relative p-0">
       <nav class="navbar navbar-expand-lg navbar-dark px-5 py-3 py-lg-0">
         <a href="index.html" class="navbar-brand p-0">
-          <h1 class="m-0"><i class="fa fa-user-tie me-2"></i>Startup</h1>
+          <h1 class="m-0"><i class="fa fa-user-tie me-2"></i>InfoNexa</h1>
         </a>
         <button
           class="navbar-toggler"
@@ -802,10 +808,10 @@
               </div>
               <div class="bg-light text-center" style="padding: 30px">
                 <p>
-                   We help modern businesses thrive in a tech-driven world.
-                   From cloud-native apps to secure enterprise platforms, 
-                   our team delivers solutions that scale with your goals. 
-                   Let's transform your ideas into intelligent, future-ready digital products.
+                  We help modern businesses thrive in a tech-driven world. From
+                  cloud-native apps to secure enterprise platforms, our team
+                  delivers solutions that scale with your goals. Let's transform
+                  your ideas into intelligent, future-ready digital products.
                 </p>
                 <a href="" class="btn btn-primary py-2 px-4">Read More</a>
               </div>
@@ -851,7 +857,7 @@
             >
               <a href="index.html" class="navbar-brand">
                 <h1 class="m-0 text-white">
-                  <i class="fa fa-user-tie me-2"></i>Startup
+                  <i class="fa fa-user-tie me-2"></i>InfoNexa
                 </h1>
               </a>
               <p class="mt-3 mb-4">
@@ -990,8 +996,8 @@
             >
               <p class="mb-0">
                 &copy;
-                <a class="text-white border-bottom" href="#">Your Site Name</a>.
-                All Rights Reserved.
+                <a class="text-white border-bottom" href="#">InfoNexa</a>. All
+                Rights Reserved.
 
                 <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
                 Designed by
