--- a/about.html
+++ b/about.html
@@ -2,10 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Startup - Startup Website</title>
+    <title>About Us - InfoNexa IT Solutions</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content="Free HTML Templates" name="keywords" />
-    <meta content="Free HTML Templates" name="description" />
+    <meta
+      content="InfoNexa, About Us, IT Solutions, Digital Transformation, Technology Services"
+      name="keywords"
+    />
+    <meta
+      content="Learn about InfoNexa's mission to provide strategic IT solutions that accelerate business growth through innovative technology."
+      name="description"
+    />
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon" />
@@ -55,13 +61,15 @@
         <div class="col-lg-8 text-center text-lg-start mb-2 mb-lg-0">
           <div class="d-inline-flex align-items-center" style="height: 45px">
             <small class="me-3 text-light"
-              ><i class="fa fa-map-marker-alt me-2"></i>411038 Kothrud, Pune, Maharashtra</small
+              ><i class="fa fa-map-marker-alt me-2"></i>411038 Kothrud, Pune,
+              Maharashtra</small
             >
             <small class="me-3 text-light"
               ><i class="fa fa-phone-alt me-2"></i>+91 917 287 1401</small
             >
             <small class="text-light"
-              ><i class="fa fa-envelope-open me-2"></i>darekarsanket1@gmail.com</small
+              ><i class="fa fa-envelope-open me-2"></i
+              >darekarsanket1@gmail.com</small
             >
           </div>
         </div>
@@ -102,7 +110,7 @@
     <div class="container-fluid position-relative p-0">
       <nav class="navbar navbar-expand-lg navbar-dark px-5 py-3 py-lg-0">
         <a href="index.html" class="navbar-brand p-0">
-          <h1 class="m-0"><i class="fa fa-user-tie me-2"></i>Startup</h1>
+          <h1 class="m-0"><i class="fa fa-user-tie me-2"></i>InfoNexa</h1>
         </a>
         <button
           class="navbar-toggler"
@@ -354,7 +362,9 @@
               </div>
               <div class="text-center py-4">
                 <h4 class="text-primary">Priya Sharma</h4>
-                <p class="text-uppercase m-0">Digital Transformation Consultant</p>
+                <p class="text-uppercase m-0">
+                  Digital Transformation Consultant
+                </p>
               </div>
             </div>
           </div>
@@ -429,11 +439,11 @@
             >
               <a href="index.html" class="navbar-brand">
                 <h1 class="m-0 text-white">
-                  <i class="fa fa-user-tie me-2"></i>Startup
+                  <i class="fa fa-user-tie me-2"></i>InfoNexa
                 </h1>
               </a>
               <p class="mt-3 mb-4">
-                 Empowering digital transformation through innovative IT
+                Empowering digital transformation through innovative IT
                 services. From cloud-native apps to secure enterprise solutions,
                 we deliver technology that scales. Join our newsletter to stay
                 ahead in tech innovation.
@@ -568,8 +578,8 @@
             >
               <p class="mb-0">
                 &copy;
-                <a class="text-white border-bottom" href="#">Your Site Name</a>.
-                All Rights Reserved.
+                <a class="text-white border-bottom" href="#">InfoNexa</a>. All
+                Rights Reserved.
 
                 <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
                 Designed by
