--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Startup - Startup Website Template</title>
+    <title>Contact Us - InfoNexa IT Solutions</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content="Free HTML Templates" name="keywords" />
-    <meta content="Free HTML Templates" name="description" />
+    <meta
+      content="Contact InfoNexa, IT Support, Technology Consultation, Digital Transformation Contact"
+      name="keywords"
+    />
+    <meta
+      content="Contact InfoNexa for IT solutions, digital transformation services, and technology consultation. Get in touch with our expert team."
+      name="description"
+    />
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon" />
@@ -104,7 +110,7 @@
     <div class="container-fluid position-relative p-0">
       <nav class="navbar navbar-expand-lg navbar-dark px-5 py-3 py-lg-0">
         <a href="index.html" class="navbar-brand p-0">
-          <h1 class="m-0"><i class="fa fa-user-tie me-2"></i>Startup</h1>
+          <h1 class="m-0"><i class="fa fa-user-tie me-2"></i>InfoNexa</h1>
         </a>
         <button
           class="navbar-toggler"
