--- a/feature.html
+++ b/feature.html
@@ -2,10 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Startup - Startup Website Template</title>
+    <title>Features - InfoNexa IT Solutions</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content="Free HTML Templates" name="keywords" />
-    <meta content="Free HTML Templates" name="description" />
+    <meta
+      content="InfoNexa Features, IT Solutions Features, Technology Services, Digital Innovation"
+      name="keywords"
+    />
+    <meta
+      content="Discover InfoNexa's comprehensive features and capabilities in IT solutions, digital transformation, and technology services."
+      name="description"
+    />
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon" />
@@ -104,7 +110,7 @@
     <div class="container-fluid position-relative p-0">
       <nav class="navbar navbar-expand-lg navbar-dark px-5 py-3 py-lg-0">
         <a href="index.html" class="navbar-brand p-0">
-          <h1 class="m-0"><i class="fa fa-user-tie me-2"></i>Startup</h1>
+          <h1 class="m-0"><i class="fa fa-user-tie me-2"></i>InfoNexa</h1>
         </a>
         <button
           class="navbar-toggler"
@@ -234,7 +240,9 @@
                 </div>
                 <h4>Best In Industry</h4>
                 <p class="mb-0">
-                 With years of experience and innovation, we deliver industry-leading IT solutions that are scalable, secure, and tailored to your business needs.
+                  With years of experience and innovation, we deliver
+                  industry-leading IT solutions that are scalable, secure, and
+                  tailored to your business needs.
                 </p>
               </div>
               <div class="col-12 wow zoomIn" data-wow-delay="0.6s">
@@ -246,7 +254,8 @@
                 </div>
                 <h4>Award Winning</h4>
                 <p class="mb-0">
-                  Recognized for excellence and innovation, our solutions have earned awards and trust from clients worldwide.
+                  Recognized for excellence and innovation, our solutions have
+                  earned awards and trust from clients worldwide.
                 </p>
               </div>
             </div>
@@ -276,7 +285,9 @@
                 </div>
                 <h4>Professional Staff</h4>
                 <p class="mb-0">
-                 Our team of certified professionals brings deep technical expertise, strong communication, and a commitment to delivering quality at every step.
+                  Our team of certified professionals brings deep technical
+                  expertise, strong communication, and a commitment to
+                  delivering quality at every step.
                 </p>
               </div>
               <div class="col-12 wow zoomIn" data-wow-delay="0.8s">
@@ -288,7 +299,9 @@
                 </div>
                 <h4>24/7 Support</h4>
                 <p class="mb-0">
-                 Our dedicated support team ensures your systems are always up and running, no matter the time zone—because business never sleeps.
+                  Our dedicated support team ensures your systems are always up
+                  and running, no matter the time zone—because business never
+                  sleeps.
                 </p>
               </div>
             </div>
@@ -331,11 +344,14 @@
             >
               <a href="index.html" class="navbar-brand">
                 <h1 class="m-0 text-white">
-                  <i class="fa fa-user-tie me-2"></i>Startup
+                  <i class="fa fa-user-tie me-2"></i>InfoNexa
                 </h1>
               </a>
               <p class="mt-3 mb-4">
-               Empowering digital transformation through innovative IT services. From cloud-native apps to secure enterprise solutions, we deliver technology that scales. Join our newsletter to stay ahead in tech innovation.
+                Empowering digital transformation through innovative IT
+                services. From cloud-native apps to secure enterprise solutions,
+                we deliver technology that scales. Join our newsletter to stay
+                ahead in tech innovation.
               </p>
               <form action="">
                 <div class="input-group">
@@ -467,8 +483,8 @@
             >
               <p class="mb-0">
                 &copy;
-                <a class="text-white border-bottom" href="#">Your Site Name</a>.
-                All Rights Reserved.
+                <a class="text-white border-bottom" href="#">InfoNexa</a>. All
+                Rights Reserved.
 
                 <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
                 Designed by
