--- a/quote.html
+++ b/quote.html
@@ -2,10 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Startup - Startup Website Template</title>
+    <title>Get Quote - InfoNexa IT Solutions</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content="Free HTML Templates" name="keywords" />
-    <meta content="Free HTML Templates" name="description" />
+    <meta
+      content="InfoNexa Quote, IT Services Quote, Free Consultation, Technology Solutions"
+      name="keywords"
+    />
+    <meta
+      content="Get a free quote for InfoNexa's IT solutions and digital transformation services. Contact us for personalized consultation."
+      name="description"
+    />
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon" />
@@ -104,7 +110,7 @@
     <div class="container-fluid position-relative p-0">
       <nav class="navbar navbar-expand-lg navbar-dark px-5 py-3 py-lg-0">
         <a href="index.html" class="navbar-brand p-0">
-          <h1 class="m-0"><i class="fa fa-user-tie me-2"></i>Startup</h1>
+          <h1 class="m-0"><i class="fa fa-user-tie me-2"></i>InfoNexa</h1>
         </a>
         <button
           class="navbar-toggler"
@@ -342,7 +348,7 @@
             >
               <a href="index.html" class="navbar-brand">
                 <h1 class="m-0 text-white">
-                  <i class="fa fa-user-tie me-2"></i>Startup
+                  <i class="fa fa-user-tie me-2"></i>InfoNexa
                 </h1>
               </a>
               <p class="mt-3 mb-4">
@@ -481,8 +487,8 @@
             >
               <p class="mb-0">
                 &copy;
-                <a class="text-white border-bottom" href="#">Your Site Name</a>.
-                All Rights Reserved.
+                <a class="text-white border-bottom" href="#">InfoNexa</a>. All
+                Rights Reserved.
 
                 <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
                 Designed by
