--- a/about.html
+++ b/about.html
@@ -13,6 +13,32 @@
       name="description"
     />
 
+    <!-- SEO Meta Tags -->
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="InfoNexa" />
+    <link rel="canonical" href="https://www.infonexa.com/about.html" />
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="About Us - InfoNexa IT Solutions" />
+    <meta
+      property="og:description"
+      content="Learn about InfoNexa's mission to provide strategic IT solutions that accelerate business growth through innovative technology."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.infonexa.com/about.html" />
+    <meta
+      property="og:image"
+      content="https://www.infonexa.com/img/carousel-1.jpg"
+    />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="About Us - InfoNexa IT Solutions" />
+    <meta
+      name="twitter:description"
+      content="Learn about InfoNexa's mission to provide strategic IT solutions that accelerate business growth through innovative technology."
+    />
+
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon" />
 
