--- a/team.html
+++ b/team.html
@@ -218,8 +218,7 @@
     </div>
     <!-- Full Screen Search End -->
 
-    <!-- Team Start - COMMENTED OUT AS REQUESTED BY CLIENT -->
-    <!--
+    <!-- Team Start -->
     <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
       <div class="container py-5">
         <div
@@ -332,8 +331,7 @@
         </div>
       </div>
     </div>
-    -->
-    <!-- Team End - COMMENTED OUT AS REQUESTED BY CLIENT -->
+    <!-- Team End -->
 
     <!-- Vendor Start -->
     <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
