--- a/index.html
+++ b/index.html
@@ -2,19 +2,67 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>InfoNexa - IT Solutions & Digital Transformation</title>
+    <title>
+      InfoNexa | Leading IT Solutions & Digital Transformation Company
+    </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta
-      content="InfoNexa, IT Solutions, Digital Transformation, Cloud Services, Software Development"
+      content="InfoNexa, InfoNexa IT Solutions, InfoNexa Technologies, InfoNexa Digital, IT Solutions, Digital Transformation, Cloud Services, Software Development, InfoNexa Pune, InfoNexa Maharashtra"
       name="keywords"
     />
     <meta
-      content="InfoNexa provides strategic IT solutions that accelerate business growth through innovative technology services."
+      content="InfoNexa is a leading IT solutions company in Pune, Maharashtra, providing strategic digital transformation services that accelerate business growth through innovative technology. Official website of InfoNexa."
       name="description"
     />
 
+    <!-- SEO Meta Tags -->
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="InfoNexa" />
+    <meta name="language" content="English" />
+    <meta name="revisit-after" content="7 days" />
+    <link rel="canonical" href="https://www.infonexa.com/" />
+
+    <!-- Open Graph Meta Tags for Social Sharing -->
+    <meta
+      property="og:title"
+      content="InfoNexa | Leading IT Solutions & Digital Transformation Company"
+    />
+    <meta
+      property="og:description"
+      content="InfoNexa is a leading IT solutions company in Pune, Maharashtra, providing strategic digital transformation services that accelerate business growth through innovative technology. Official website of InfoNexa."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.infonexa.com/" />
+    <meta
+      property="og:image"
+      content="https://www.infonexa.com/img/carousel-1.jpg"
+    />
+    <meta property="og:site_name" content="InfoNexa" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:brand" content="InfoNexa" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="InfoNexa | Leading IT Solutions & Digital Transformation Company"
+    />
+    <meta
+      name="twitter:description"
+      content="InfoNexa is a leading IT solutions company in Pune, Maharashtra, providing strategic digital transformation services that accelerate business growth through innovative technology. Official website of InfoNexa."
+    />
+    <meta
+      name="twitter:image"
+      content="https://www.infonexa.com/img/carousel-1.jpg"
+    />
+    <meta name="twitter:site" content="@InfoNexa" />
+    <meta name="twitter:creator" content="@InfoNexa" />
+
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon" />
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon.ico" />
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -43,6 +91,116 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet" />
+
+    <!-- Enhanced Brand Schema Markup for Search Dominance -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "InfoNexa",
+        "alternateName": [
+          "InfoNexa IT Solutions",
+          "InfoNexa Technologies",
+          "InfoNexa Digital"
+        ],
+        "description": "InfoNexa is a leading IT solutions company providing strategic digital transformation services that accelerate business growth through innovative technology.",
+        "url": "https://www.infonexa.com",
+        "logo": "https://www.infonexa.com/img/favicon.ico",
+        "image": "https://www.infonexa.com/img/carousel-1.jpg",
+        "foundingDate": "2020",
+        "founder": {
+          "@type": "Person",
+          "name": "InfoNexa Founder"
+        },
+        "contactPoint": [
+          {
+            "@type": "ContactPoint",
+            "telephone": "+91-917-287-1401",
+            "contactType": "customer service",
+            "email": "darekarsanket1@gmail.com",
+            "availableLanguage": ["English", "Hindi"]
+          },
+          {
+            "@type": "ContactPoint",
+            "contactType": "sales",
+            "email": "sales@infonexa.com"
+          }
+        ],
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Kothrud",
+          "addressLocality": "Pune",
+          "addressRegion": "Maharashtra",
+          "postalCode": "411038",
+          "addressCountry": "IN"
+        },
+        "areaServed": [
+          {
+            "@type": "Country",
+            "name": "India"
+          },
+          {
+            "@type": "State",
+            "name": "Maharashtra"
+          },
+          {
+            "@type": "City",
+            "name": "Pune"
+          }
+        ],
+        "sameAs": [
+          "https://www.facebook.com/infonexa",
+          "https://www.twitter.com/infonexa",
+          "https://www.linkedin.com/company/infonexa",
+          "https://www.instagram.com/infonexa",
+          "https://www.youtube.com/c/infonexa"
+        ],
+        "knowsAbout": [
+          "IT Solutions",
+          "Digital Transformation",
+          "Cloud Computing",
+          "Software Development",
+          "Cybersecurity",
+          "Data Analytics",
+          "Artificial Intelligence",
+          "Machine Learning",
+          "Enterprise Solutions",
+          "Technology Consulting"
+        ],
+        "hasOfferCatalog": {
+          "@type": "OfferCatalog",
+          "name": "InfoNexa IT Services",
+          "itemListElement": [
+            {
+              "@type": "Offer",
+              "itemOffered": {
+                "@type": "Service",
+                "name": "Digital Transformation",
+                "description": "Complete digital transformation solutions for modern businesses"
+              }
+            },
+            {
+              "@type": "Offer",
+              "itemOffered": {
+                "@type": "Service",
+                "name": "Cloud Solutions",
+                "description": "Scalable cloud infrastructure and migration services"
+              }
+            },
+            {
+              "@type": "Offer",
+              "itemOffered": {
+                "@type": "Service",
+                "name": "Software Development",
+                "description": "Custom software development and application modernization"
+              }
+            }
+          ]
+        },
+        "slogan": "Empowering Digital Transformation Through Innovation",
+        "keywords": "InfoNexa, IT Solutions, Digital Transformation, Cloud Services, Software Development, Technology Consulting, Pune IT Company"
+      }
+    </script>
   </head>
 
   <body>
@@ -171,7 +329,11 @@
       >
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="w-100" src="img/carousel-1.jpg" alt="Image" />
+            <img
+              class="w-100"
+              src="img/carousel-1.jpg"
+              alt="InfoNexa IT Solutions - Digital Transformation Services"
+            />
             <div
               class="carousel-caption d-flex flex-column align-items-center justify-content-center"
             >
@@ -196,7 +358,11 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img class="w-100" src="img/carousel-2.jpg" alt="Image" />
+            <img
+              class="w-100"
+              src="img/carousel-2.jpg"
+              alt="InfoNexa Cloud Services - Enterprise IT Solutions"
+            />
             <div
               class="carousel-caption d-flex flex-column align-items-center justify-content-center"
             >
@@ -995,7 +1161,11 @@
           <div class="col-lg-4 wow slideInUp" data-wow-delay="0.3s">
             <div class="team-item bg-light rounded overflow-hidden">
               <div class="team-img position-relative overflow-hidden">
-                <img class="img-fluid w-100" src="img/team-1.jpg" alt="" />
+                <img
+                  class="img-fluid w-100"
+                  src="img/team-1.jpg"
+                  alt="InfoNexa Team Member - IT Professional"
+                />
                 <div class="team-social">
                   <a
                     class="btn btn-lg btn-primary btn-lg-square rounded"
@@ -1028,7 +1198,11 @@
           <div class="col-lg-4 wow slideInUp" data-wow-delay="0.6s">
             <div class="team-item bg-light rounded overflow-hidden">
               <div class="team-img position-relative overflow-hidden">
-                <img class="img-fluid w-100" src="img/team-2.jpg" alt="" />
+                <img
+                  class="img-fluid w-100"
+                  src="img/team-2.jpg"
+                  alt="InfoNexa Team Member - Technology Expert"
+                />
                 <div class="team-social">
                   <a
                     class="btn btn-lg btn-primary btn-lg-square rounded"
@@ -1063,7 +1237,11 @@
           <div class="col-lg-4 wow slideInUp" data-wow-delay="0.9s">
             <div class="team-item bg-light rounded overflow-hidden">
               <div class="team-img position-relative overflow-hidden">
-                <img class="img-fluid w-100" src="img/team-3.jpg" alt="" />
+                <img
+                  class="img-fluid w-100"
+                  src="img/team-3.jpg"
+                  alt="InfoNexa Team Member - Digital Solutions Specialist"
+                />
                 <div class="team-social">
                   <a
                     class="btn btn-lg btn-primary btn-lg-square rounded"
@@ -1112,7 +1290,11 @@
           <div class="col-lg-4 wow slideInUp" data-wow-delay="0.3s">
             <div class="blog-item bg-light rounded overflow-hidden">
               <div class="blog-img position-relative overflow-hidden">
-                <img class="img-fluid" src="img/blog-1.jpg" alt="" />
+                <img
+                  class="img-fluid"
+                  src="img/blog-1.jpg"
+                  alt="InfoNexa Blog - Web Design and Development Services"
+                />
                 <a
                   class="position-absolute top-0 start-0 bg-primary text-white rounded-end mt-5 py-2 px-4"
                   href=""
@@ -1151,7 +1333,11 @@
           <div class="col-lg-4 wow slideInUp" data-wow-delay="0.6s">
             <div class="blog-item bg-light rounded overflow-hidden">
               <div class="blog-img position-relative overflow-hidden">
-                <img class="img-fluid" src="img/blog-2.jpg" alt="" />
+                <img
+                  class="img-fluid"
+                  src="img/blog-2.jpg"
+                  alt="InfoNexa Blog - Cloud and DevOps Solutions"
+                />
                 <a
                   class="position-absolute top-0 start-0 bg-primary text-white rounded-end mt-5 py-2 px-4"
                   href=""
@@ -1189,7 +1375,11 @@
           <div class="col-lg-4 wow slideInUp" data-wow-delay="0.9s">
             <div class="blog-item bg-light rounded overflow-hidden">
               <div class="blog-img position-relative overflow-hidden">
-                <img class="img-fluid" src="img/blog-3.jpg" alt="" />
+                <img
+                  class="img-fluid"
+                  src="img/blog-3.jpg"
+                  alt="InfoNexa Blog - Cybersecurity and Data Protection"
+                />
                 <a
                   class="position-absolute top-0 start-0 bg-primary text-white rounded-end mt-5 py-2 px-4"
                   href=""
@@ -1234,15 +1424,15 @@
       <div class="container py-5 mb-5">
         <div class="bg-white">
           <div class="owl-carousel vendor-carousel">
-            <img src="img/vendor-1.jpg" alt="" />
-            <img src="img/vendor-2.jpg" alt="" />
-            <img src="img/vendor-3.jpg" alt="" />
-            <img src="img/vendor-4.jpg" alt="" />
-            <img src="img/vendor-5.jpg" alt="" />
-            <img src="img/vendor-6.jpg" alt="" />
-            <img src="img/vendor-7.jpg" alt="" />
-            <img src="img/vendor-8.jpg" alt="" />
-            <img src="img/vendor-9.jpg" alt="" />
+            <img src="img/vendor-1.jpg" alt="InfoNexa Technology Partner 1" />
+            <img src="img/vendor-2.jpg" alt="InfoNexa Technology Partner 2" />
+            <img src="img/vendor-3.jpg" alt="InfoNexa Technology Partner 3" />
+            <img src="img/vendor-4.jpg" alt="InfoNexa Technology Partner 4" />
+            <img src="img/vendor-5.jpg" alt="InfoNexa Technology Partner 5" />
+            <img src="img/vendor-6.jpg" alt="InfoNexa Technology Partner 6" />
+            <img src="img/vendor-7.jpg" alt="InfoNexa Technology Partner 7" />
+            <img src="img/vendor-8.jpg" alt="InfoNexa Technology Partner 8" />
+            <img src="img/vendor-9.jpg" alt="InfoNexa Technology Partner 9" />
           </div>
         </div>
       </div>
